--- a/k8/kafka/kafka.yaml
+++ b/k8/kafka/kafka.yaml
@@ -106,6 +106,14 @@ spec:
               value: "kafka-0.kafka-svc.kafka-kraft-ns.svc.cluster.local:9092"
             - name: KAFKA_CLUSTERS_0_METRICS_PORT
               value: "9997"
+            - name: AUTH_TYPE
+              value: "LOGIN_FORM"
+            - name: SPRING_SECURITY_USER_NAME
+              value: "kafka-admin"
+            - name: SPRING_SECURITY_USER_PASSWORD
+              value: "oGLEaDelebOr"
+            - name: KAFKA_CLUSTERS_0_READONLY
+              value: "false"
 ---
 apiVersion: v1
 kind: Service
@@ -114,12 +122,40 @@ metadata:
   labels:
     app: kafka-ui
   namespace: kafka-kraft-ns
+  annotations:
+    cloud.google.com/neg: '{"ingress":true}'
 spec:
   clusterIP: None
   ports:
-    - name: '8080'
-      port: 8080
+    - port: 80
       protocol: TCP
       targetPort: 8080
   selector:
     app: kafka-ui
+  type: ClusterIP
+---
+# Requires tls secret to be present
+# Create using:
+# $ kubectl -n kafka-kraft-ns create secret tls secret-supergroup-20221220 --cert=supergroup.nginx.pem --key=supergroup.key
+kind: Ingress
+apiVersion: networking.k8s.io/v1
+metadata:
+  name: provectus-ingress
+  namespace: kafka-kraft-ns
+spec:
+  tls:
+    - hosts:
+      - kafkaui.supergroup.ai
+      secretName: secret-supergroup-20221220
+  ingressClassName: nginx
+  rules:
+    - host: 'kafkaui.supergroup.ai'
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: kafka-ui-svc
+                port:
+                  number: 80
