--- a/k8/dashboard/oauth2-proxy.yaml
+++ b/k8/dashboard/oauth2-proxy.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     k8s-app: oauth2-proxy
   name: oauth2-proxy
-  namespace: kube-system
+  namespace: kubernetes-dashboard
 spec:
   replicas: 1
   selector:
@@ -47,7 +47,7 @@ metadata:
   labels:
     k8s-app: oauth2-proxy
   name: oauth2-proxy
-  namespace: kube-system
+  namespace: kubernetes-dashboard
 spec:
   ports:
   - name: http
