--- a/k8/dashboard/archive/oauth2-proxy.yaml
+++ b/k8/dashboard/archive/oauth2-proxy.yaml
@@ -18,17 +18,17 @@ spec:
     spec:
       containers:
       - args:
-        - --provider=github
-        - --email-domain=*
+        - --provider=google
+        - --email-domain=supergroup.ai
         - --upstream=file:///dev/null
         - --http-address=0.0.0.0:4180
         # Register a new application
         # https://github.com/settings/applications/new
         env:
         - name: OAUTH2_PROXY_CLIENT_ID
-          value: "c27cce5addfd12d11230"
+          value: "112708216598-l80s5fgt20pcb8pvd59mepl6v9ueg3bf.apps.googleusercontent.com"
         - name: OAUTH2_PROXY_CLIENT_SECRET
-          value: "b412f20050a76641864a439bf9d78e6027640be0"
+          value: "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"
         # docker run -ti --rm python:3-alpine python -c 'import secrets,base64; print(base64.b64encode(base64.b64encode(secrets.token_bytes(16))));'
         - name: OAUTH2_PROXY_COOKIE_SECRET
           value: "1+fxCZXjWSL9pED/Pf1IFw=="
