stupid kubernetes cron treats "* */12 * * *" as every minute of every 12 hours. means hour = 0, mins = [0,1,2 ... 59]. Silly thing to do.
Btw, unix cron doesn't

--- a/k8/backer/mongo/cronjob.yaml
+++ b/k8/backer/mongo/cronjob.yaml
@@ -4,7 +4,9 @@ kind: CronJob
 metadata:
   name: backer-mongo-cron
 spec:
-  schedule: "* */12 * * *"
+  schedule: "0 1,13 * * *"
+  successfulJobsHistoryLimit: 5
+  failedJobsHistoryLimit: 5
   jobTemplate:
     spec:
       template:
