PGDATA fix to finally fix some persistence issues with postgres

--- a/k8/postgres.yaml
+++ b/k8/postgres.yaml
@@ -74,6 +74,8 @@ spec:
                 secretKeyRef:
                   name: psql-secret
                   key: password
+            - name: PGDATA
+              value: /var/lib/postgresql/data/pgdata
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: postgredb
