mysql backup job and increase max_connections for mysql

--- a/k8/kafka/docker-compose.yml
+++ b/k8/kafka/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://kafka:9092,EXTERNAL://localhost:9093
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT
       - KAFKA_BROKER_ID=1
+      - KAFKA_CFG_NODE_ID=1
       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@127.0.0.1:9094
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_JMX_PORT=9997
